--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-alert-sdk",
   "version": "1.0.0",
-  "description": "",
+  "description": "一个简单的报警服务前端 SDK ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,23 +9,23 @@
   "author": "sandsea",
   "license": "MIT",
   "dependencies": {
-    "@rollup/plugin-commonjs": "^25.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
     "axios": "^1.4.0",
     "error-stack-parser": "^2.1.4",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.1",
-    "rollup-plugin-node-externals": "^6.0.1"
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-externals": "^6.0.1",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.5.2"
   },
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/LINGyue-dot/simple-alert-sdk.git"
-    }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LINGyue-dot/simple-alert-sdk.git"
+  }
 }
