--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-alert-sdk",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "一个简单的报警服务前端 SDK ",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,9 +11,7 @@
   "author": "sandsea",
   "license": "MIT",
   "dependencies": {
-    "typescript": "^5.0.4"
-  },
-  "peerDependencies": {
+    "typescript": "^5.0.4",
     "axios": "^1.4.0",
     "error-stack-parser": "^2.1.4"
   },
