--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-alert-sdk",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "一个简单的报警服务前端 SDK ",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,12 +11,13 @@
   "author": "sandsea",
   "license": "MIT",
   "dependencies": {
-    "typescript": "^5.0.4",
     "axios": "^1.4.0",
-    "error-stack-parser": "^2.1.4"
+    "error-stack-parser": "^2.1.4",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.1",
     "rollup": "^3.23.0",
